--- a/Alpha.Identity.Service/Properties/launchSettings.json
+++ b/Alpha.Identity.Service/Properties/launchSettings.json
@@ -7,6 +7,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5138",
+      "launchUrl": "http://localhost:5138/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
