--- a/Alpha.Identity.Service/appsettings.json
+++ b/Alpha.Identity.Service/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "iewIujhLbzNr18ZWnaVQJpcJzTtjjOqjzQ6GFD0Z",
+    "Issuer": "http://identity:8080",
+    "Audience": "http://identity:8080"
+  }
+
 }
