Alpha user customization

--- a/Alpha.Identity.Service/appsettings.json
+++ b/Alpha.Identity.Service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=password;Host=postgres;Port=5432;Database=auth;"
+    "DefaultConnection": "User ID=postgres;Password=password;Host=postgres;Port=5432;Database=identity;"
   },
   "Logging": {
     "LogLevel": {
@@ -12,7 +12,7 @@
   "Jwt": {
     "Key": "iewIujhLbzNr18ZWnaVQJpcJzTtjjOqjzQ6GFD0Z",
     "Issuer": "http://identity:8080",
-    "Audience": "http://identity:8080"
+    "Audience": "Alpha"
   }
 
 }
