Add Refit and connect to token service

--- a/Alpha.Identity.Service/appsettings.json
+++ b/Alpha.Identity.Service/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "iewIujhLbzNr18ZWnaVQJpcJzTtjjOqjzQ6GFD0Z",
-    "Issuer": "http://identity:8080",
+    "Issuer": "http://token:8080",
     "Audience": "Alpha"
   }
 
