--- a/Alpha.Identity.Service/nuget.config
+++ b/Alpha.Identity.Service/nuget.config
@@ -3,12 +3,12 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="mludeiro" value="https://nuget.pkg.github.com/mludeiro/index.json" />
+    <add key="github.com" value="https://nuget.pkg.github.com/mludeiro/index.json" />
   </packageSources>
   <packageSourceCredentials>
-    <mludeiro>
-        <add key="Username" value="%GITHUB_USER%" />
-        <add key="ClearTextPassword" value="%GITHUB_TOKEN%" />
-      </mludeiro>
+    <github.com>
+      <add key="Username" value="%GITHUB_USER%" />
+      <add key="ClearTextPassword" value="%GITHUB_TOKEN%" />
+    </github.com>
   </packageSourceCredentials>
 </configuration>
