Using Alpha utils for consul registration

--- a/Alpha.Identity.Service/appsettings.Development.json
+++ b/Alpha.Identity.Service/appsettings.Development.json
@@ -7,5 +7,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "Consul": {
+    "ConsulAddress": "http://localhost:8500",
+    "ServiceName": "Alpha Identity Service",
+    "ServiceId": "identity.service"
   }
 }
