--- a/Alpha.Identity.Service/appsettings.json
+++ b/Alpha.Identity.Service/appsettings.json
@@ -8,6 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Consul": {
+    "ConsulAddress": "http://consul:8500",
+    "ServiceName": "Alpha Identity Service",
+    "ServiceId": "identity.service"
+  },
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "iewIujhLbzNr18ZWnaVQJpcJzTtjjOqjzQ6GFD0Z",
