--- a/Alpha.Identity.Service/Alpha.Identity.Service.csproj
+++ b/Alpha.Identity.Service/Alpha.Identity.Service.csproj
@@ -17,8 +17,11 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2"/>
-    <PackageReference Include="Alpha.Common" Version="1.0.8"/>
-    <PackageReference Include="Alpha.Utils" Version="1.0.2"/>
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0"/>
+    <PackageReference Include="Consul" Version="1.7.14.3"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
+
+    <PackageReference Include="Alpha.Common" Version="1.0.8"/>
+    <PackageReference Include="Alpha.Utils" Version="1.0.3"/>
   </ItemGroup>
 </Project>
