Remove jwt key from this service

--- a/Alpha.Identity.Service/appsettings.Development.json
+++ b/Alpha.Identity.Service/appsettings.Development.json
@@ -11,6 +11,6 @@
   "Consul": {
     "ConsulAddress": "http://localhost:8500",
     "ServiceName": "Alpha Identity Service",
-    "ServiceId": "identity.service"
+    "ServiceId": "identity.service.localhost"
   }
 }
