--- a/Alpha.Identity.Service/Alpha.Identity.Service.csproj
+++ b/Alpha.Identity.Service/Alpha.Identity.Service.csproj
@@ -16,7 +16,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2"/>
+
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14"/>
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0"/>
     <PackageReference Include="Consul" Version="1.7.14.3"/>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
