Using Dapr+refit

--- a/Alpha.Identity.Service/Alpha.Identity.Service.csproj
+++ b/Alpha.Identity.Service/Alpha.Identity.Service.csproj
@@ -15,15 +15,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1"/>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.1"/>
-
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14"/>
-
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0"/>
-
     <PackageReference Include="Consul" Version="1.7.14.3"/>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
     <PackageReference Include="Alpha.Common" Version="1.0.28"/>
     <PackageReference Include="Mapster" Version="7.4.0"/>
+    <PackageReference Include="Dapr.Client" Version="1.13.0"/>
   </ItemGroup>
 </Project>
