--- a/Alpha.Identity.Service/Alpha.Identity.Service.csproj
+++ b/Alpha.Identity.Service/Alpha.Identity.Service.csproj
@@ -23,5 +23,6 @@
     <PackageReference Include="Alpha.Common" Version="1.0.28"/>
     <PackageReference Include="Mapster" Version="7.4.0"/>
     <PackageReference Include="Dapr.Client" Version="1.13.0"/>
+    <PackageReference Include="Dapr.Extensions.Configuration" Version="1.13.0"/>
   </ItemGroup>
 </Project>
