--- a/Alpha.Identity.Service/Alpha.Identity.Service.csproj
+++ b/Alpha.Identity.Service/Alpha.Identity.Service.csproj
@@ -20,9 +20,11 @@
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0"/>
     <PackageReference Include="Consul" Version="1.7.14.3"/>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
-    <PackageReference Include="Alpha.Common" Version="1.0.28"/>
     <PackageReference Include="Mapster" Version="7.4.0"/>
     <PackageReference Include="Dapr.Client" Version="1.13.0"/>
     <PackageReference Include="Dapr.Extensions.Configuration" Version="1.13.0"/>
+
+    <PackageReference Include="Alpha.Common" Version="1.0.33"/>
+    <PackageReference Include="Alpha.Tools" Version="1.0.3"/>
   </ItemGroup>
 </Project>
